# readWriteXlsxFile

./: .gitignore  CMakeLists.txt  Changelog.txt  Doxyfile  Makefile  README  README.md  _config.yml  example_xlsxio_read.c  example_xlsxio_read.cbp  example_xlsxio_read_advanced.c  example_xlsxio_read_advanced.cbp  example_xlsxio_write.c  example_xlsxio_write.cbp  index.html  index.md  libxlsxio_read.cbp  libxlsxio_read_shared.cbp  libxlsxio_write.cbp  libxlsxio_write_shared.cbp  mainpage.dox  params.json  xlsxio.workspace  xlsxio_read.c  xlsxio_read.cbp  xlsxio_read.h  xlsxio_read_main.c  xlsxio_write.c  xlsxio_write.cbp  xlsxio_write.h  xlsxio_write_main.c
CMake/: FindLibZip.cmake
examples/: example_xlsxio_read.c  example_xlsxio_read_advanced.c  example_xlsxio_read_cpp.cpp  example_xlsxio_write.c  example_xlsxio_write_cpp.cpp  example_xlsxio_write_getversion.c
include/: xlsxio_read.h  xlsxio_version.h  xlsxio_write.h
lib/: xlsxio_private.h  xlsxio_read.c  xlsxio_read_sharedstrings.c  xlsxio_read_sharedstrings.h  xlsxio_version.h  xlsxio_write.c
src/: xlsxio_csv2xlsx.c  xlsxio_xlsx2csv.c
