CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(xlsxio)

SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMake" ${CMAKE_MODULE_PATH})
FIND_PACKAGE(libzip REQUIRED)
FIND_PACKAGE(expat REQUIRED)

#SET(CMAKE_CXX_FLAGS "-g -Wall")
#ADD_SUBDIRECTORY(src)

#IF(NOT WIN32)
#-pthread
#ENDIF

INCLUDE_DIRECTORIES(include)
#ADD_LIBRARY(xlsxio_read STATIC lib/xlsxio_read.c ${libzip_LIBRARIES} ${expat_LIBRARIES})
#ADD_LIBRARY(xlsxio_write STATIC lib/xlsxio_write.c ${libzip_LIBRARIES})


ADD_LIBRARY(xlsxio_read_shared SHARED lib/xlsxio_read.c)
ADD_LIBRARY(xlsxio_read_static STATIC lib/xlsxio_read.c)
ADD_LIBRARY(xlsxio_write_shared SHARED lib/xlsxio_write.c)
ADD_LIBRARY(xlsxio_write_static STATIC lib/xlsxio_write.c ${LIBZIP_LIBRARIES})
SET_TARGET_PROPERTIES(xlsxio_read_shared PROPERTIES DEFINE_SYMBOL "BUILD_XLSXIO_DLL")
SET_TARGET_PROPERTIES(xlsxio_read_static PROPERTIES DEFINE_SYMBOL "BUILD_XLSXIO_STATIC")
SET_TARGET_PROPERTIES(xlsxio_read_shared PROPERTIES OUTPUT_NAME xlsxio_read)
SET_TARGET_PROPERTIES(xlsxio_read_static PROPERTIES OUTPUT_NAME xlsxio_read)
TARGET_LINK_LIBRARIES(xlsxio_read_shared ${LIBZIP_LIBRARIES} ${EXPAT_LIBRARIES})
TARGET_LINK_LIBRARIES(xlsxio_read_static ${LIBZIP_LIBRARIES} ${EXPAT_LIBRARIES})
SET_TARGET_PROPERTIES(xlsxio_write_shared PROPERTIES DEFINE_SYMBOL "BUILD_XLSXIO_DLL")
SET_TARGET_PROPERTIES(xlsxio_write_static PROPERTIES DEFINE_SYMBOL "BUILD_XLSXIO_STATIC")
SET_TARGET_PROPERTIES(xlsxio_write_shared PROPERTIES OUTPUT_NAME xlsxio_write)
SET_TARGET_PROPERTIES(xlsxio_write_static PROPERTIES OUTPUT_NAME xlsxio_write)
TARGET_LINK_LIBRARIES(xlsxio_write_shared ${LIBZIP_LIBRARIES})
TARGET_LINK_LIBRARIES(xlsxio_write_static ${LIBZIP_LIBRARIES})

INSTALL(TARGETS xlsxio_read_shared xlsxio_read_static xlsxio_write_shared xlsxio_write_static
        ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
        LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
        RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
